# data-cleaning-openenv

./: DEPLOYMENT.md  Dockerfile  README.md  VALIDATION_REPORT.md  inference.py  openenv.py  openenv.yaml  pyproject.toml  requirements.txt  test_endpoints.py  test_tasks.py  validate-submission.sh
api/: server.py
data_cleaning_openenv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
datasets/: easy_clean.csv  easy_dirty.csv  hard_clean.csv  hard_dirty.csv  medium_clean.csv  medium_dirty.csv
env/: action_handler.py  environment.py
graders/: __init__.py  grader.py
models/: action.py
server/: app.py
tasks/: easy_task.py  hard_task.py  medium_task.py  task_loader.py
utils/: actions_list.py  validators.py
